--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qp",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "description": "Queue management, similar to that of kue",
   "main": "index.js",
   "repository": {
@@ -9,6 +9,9 @@
   },
   "scripts": {
     "test": "make test"
+  },
+  "engines": {
+    "node": ">= 0.10"
   },
   "keywords": [
     "process",
