--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qp",
-  "version": "0.4.7",
+  "version": "0.4.8",
   "description": "Queue management, similar to that of kue",
   "main": "index.js",
   "repository": {
@@ -25,13 +25,11 @@
     "url": "https://github.com/simontabor/qp/issues"
   },
   "dependencies": {
-    "redis": "~0.8.3",
-    "hiredis": "~0.1.15",
-    "batch": "~0.3.2",
-    "debug": "~0.7.2"
+    "batch": "^0.5.2",
+    "debug": "^2.1.1",
+    "redis": "^0.12.1"
   },
-  "devDependencies": {
-    "mocha": "~1.9.0",
-    "should": "~1.2.2"
+  "optionalDependencies": {
+    "hiredis": "^0.2.0"
   }
 }
